后端脚手架常用功能整理

--- a/conf/pre.ini
+++ b/conf/pre.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-debug=False
+debug=True
 port=8888
 environ= UNITYMOB_ENVIRON
 
@@ -10,13 +10,13 @@ pool_size = 10
 pool_recycle = 3600
 
 [mysql]
-unitymob = 'mysql://unitymob:l8ka65##1@10.176.131.139/unitymob?charset=utf8mb4'
+unitymob = 'mysql://growthTest:dpt!DG30@169.55.248.5/internet_advertising?charset=utf8mb4'
 
 [redis]
-host = '10.176.131.139'
+host = '169.55.248.5'
 port = 6379
 password = growth_redis@jolly
 prefix = 'unitymob_'
 
 [rabbitmq]
-dsn = 'amqp://unitymob:unitymob@169.48.131.28:5672/unitymob'
+dsn = 'amqp://unitymob:unitymob@169.55.248.5:5672/unitymob'
