修改配置文件

--- a/conf/debug.ini
+++ b/conf/debug.ini
@@ -10,13 +10,13 @@ pool_size = 10
 pool_recycle = 3600
 
 [mysql]
-unitymob = 'mysql://unitymob:unitymob@2018@172.31.0.67/unitymob?charset=utf8mb4'
+unitymob = 'mysql://username:password@127.0.0.1/database?charset=utf8mb4'
 
 [redis]
-host = '192.168.3.198'
+host = '127.0.0.1'
 port = 6379
-password = unitymob
-prefix = 'unitymob_'
+password = password
+prefix = 'keyprefix_'
 
 [rabbitmq]
-dsn = 'amqp://unitymob:unitymob@172.31.0.74:5672/unitymob'
+dsn = 'amqp://username:password@127.0.0.1:5672/rabbitmq'
