--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -10,13 +10,13 @@ pool_size = 10
 pool_recycle = 3600
 
 [mysql]
-unitymob = 'mysql://unitymob:l8ka65##1@10.176.131.139/unitymob?charset=utf8mb4'
+unitymob = 'mysql://username:password@127.0.0.1/database?charset=utf8mb4'
 
 [redis]
-host = '10.176.131.139'
+host = '127.0.0.1'
 port = 6379
-password = growth_redis@jolly
-prefix = 'unitymob_'
+password = password
+prefix = 'keyprefix_'
 
 [rabbitmq]
-dsn = 'amqp://unitymob:unitymob@169.48.131.28:5672/unitymob'
+dsn = 'amqp://username:password@127.0.0.1/rabbitmq'
