--- a/conf/pre.ini
+++ b/conf/pre.ini
@@ -10,13 +10,13 @@ pool_size = 10
 pool_recycle = 3600
 
 [mysql]
-unitymob = 'mysql://growthTest:dpt!DG30@169.55.248.5/internet_advertising?charset=utf8mb4'
+unitymob = 'mysql://username:password@127.0.0.1/database?charset=utf8mb4'
 
 [redis]
-host = '169.55.248.5'
+host = '127.0.0.1'
 port = 6379
-password = growth_redis@jolly
-prefix = 'unitymob_'
+password = password
+prefix = 'keyprefix_'
 
 [rabbitmq]
-dsn = 'amqp://unitymob:unitymob@169.55.248.5:5672/unitymob'
+dsn = 'amqp://username:password@127.0.0.1:5672/rabbitmq'
