数据库表创建脚本

--- a/conf/debug.ini
+++ b/conf/debug.ini
@@ -10,12 +10,12 @@ pool_size = 10
 pool_recycle = 3600
 
 [mysql]
-unitymob = 'mysql://username:password@127.0.0.1/database?charset=utf8mb4'
+unitymob = 'mysql://root:123456@127.0.0.1/authdb?charset=utf8mb4'
 
 [redis]
-host = '127.0.0.1'
+host = '192.168.3.198'
 port = 6379
-password = password
+password = unitymob
 prefix = 'keyprefix_'
 
 [rabbitmq]
