新增部分权限功能

--- a/conf/debug.ini
+++ b/conf/debug.ini
@@ -10,7 +10,7 @@ pool_size = 10
 pool_recycle = 3600
 
 [mysql]
-unitymob = 'mysql://root:123456@127.0.0.1/authdb?charset=utf8mb4'
+unitymob = 'mysql://root:root@127.0.0.1/authdb?charset=utf8mb4'
 
 [redis]
 host = '192.168.3.198'
